<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E424B"
    tools:context=".VerifyPhoneActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:orientation="horizontal">
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"

            android:text="@string/wait_for_the_code_we_sent_you"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="#FFFFFF" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"

            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="192dp"
            android:digits="0123456789"
            android:drawablePadding="10dp"

            android:hint="@string/enter_verification_code"
            android:textColor="#FFFFFF"
            android:inputType="phone"
            android:maxLength="10" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="164dp"
            android:background="@drawable/blackbutton"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#cdd8f1" />

    </RelativeLayout>


</RelativeLayout>